--- a/Client/src/pages/categoria/categoria.html
+++ b/Client/src/pages/categoria/categoria.html
@@ -2,47 +2,47 @@
 
   <ion-navbar>
     <ion-title>
-      <h1 [hidden]="!inserimento">{{'ADD_CAT'| translate}}</h1>
-      <h1 [hidden]="inserimento">{{'UPDATE_CAT'| translate}}</h1>
+      <h3 [hidden]="!inserimento">{{'ADD_CAT'| translate}}</h3>
+      <h3 [hidden]="inserimento">{{'UPDATE_CAT'| translate}}</h3>
     </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="primary-bg">
   <form #CategoriaForm="ngForm">
     <ion-list no-lines>
       <!-------Nome Categoria -------->
       <ion-item>
         <ion-label>{{'CATEGORIA'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="cat.nome" #nome="ngModel" name="nome" required></ion-input>
+        <ion-input type="text" [(ngModel)]="nomeCat" #nome="ngModel" name="nome" required></ion-input>
       </ion-item>
       <p ion-text color="danger" [hidden]="nome.valid" padding-left>{{'CATEGORY_REQUIRED'|translate}}</p>
 
       <!------Segno Categoria ------>
       <ion-item>
         <ion-label>{{'SEGNO'|translate}}</ion-label>
-        <ion-select name="segno" [(ngModel)]="cat.segno" #segno="ngModel" required
-        okText="{{ 'SAVE_BUTTON' | translate }}" cancelText="{{ 'CANCEL_BUTTON' | translate }}">
-          <ion-option *ngFor="let s of segni" [value]="s" >{{s}}</ion-option>
+        <ion-select name="segno" [(ngModel)]="segni" #segno="ngModel" required
+        okText="{{ 'SAVE_BUTTON' | translate }}" cancelText="{{ 'CANCEL_BUTTON' | translate }}" class="buttonCss">
+          <ion-option  [value]="false" >{{'NEGATIVO'|translate}}</ion-option>
+          <ion-option [value]="true">{{'POSITIVO'|translate}}</ion-option>
         </ion-select>
       </ion-item>
       <p ion-text color="danger" [hidden]="segno.valid" padding-left>{{'SEGNO_REQUIRED'|translate}}</p>
       <ion-item>
         <ion-label>Budget</ion-label>
-        <ion-input type="number" [(ngModel)]="c.budget" #budget="ngModel" name="budget"></ion-input>
+        <ion-input type="number" [(ngModel)]="budgetCat" #budget="ngModel" name="budget"></ion-input>
       </ion-item>
       <p ion-text color="danger" [hidden]="budget.valid" padding-left>{{'BUDGET_REQUIRED'|translate}}</p>
     </ion-list>
     <!-- Submit -->
     <ion-row responsive-sm>
         <ion-col>
-          <button ion-button (click)="onSubmit(CategoriaForm)" type="submit" [disabled]="!CategoriaForm.form.valid" block>{{ 'SAVE_BUTTON' | translate }}</button>
+          <button ion-button class="button"(click)="onSubmit(CategoriaForm)" type="submit" [disabled]="!CategoriaForm.form.valid" block>{{ 'SAVE_BUTTON' | translate }}</button>
         </ion-col>
         <ion-col>
-          <button [hidden]="!inserimento" ion-button navPop block>{{'CANCEL_BUTTON'|translate}}</button>
-          <button [hidden]="inserimento" (click)="onDelete()" ion-button block>{{'DELETE_BUTTON'| translate}}</button>
+          <button class="button" ion-button navPop block>{{'CANCEL_BUTTON'|translate}}</button>
         </ion-col>
       </ion-row>
   </form>
