--- a/Client/src/pages/login/login.html
+++ b/Client/src/pages/login/login.html
@@ -34,10 +34,10 @@
       </ion-list>
       <ion-row responsive-sm>
         <ion-col>
-          <button ion-button (click)="onLogin(loginForm)" type="submit" [disabled]="!loginForm.form.valid" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+          <button ion-button (click)="onLogin(loginForm)" type="submit" [disabled]="!loginForm.form.valid" block outline>{{ 'LOGIN_BUTTON' | translate }}</button>
         </ion-col>
         <ion-col>
-          <button ion-button (click)="registrati()" block>{{'REGISTRATI' | translate}}</button>
+          <button ion-button (click)="registrati()" block outline>{{'REGISTRATI' | translate}}</button>
         </ion-col>
       </ion-row>
     </form>
