--- a/Client/src/pages/registrazione/registrazione.html
+++ b/Client/src/pages/registrazione/registrazione.html
@@ -31,21 +31,21 @@
       </ion-item>
       <p ion-text [hidden]="password.valid" color="danger" padding-left>{{'PASSWORD_REQUIRED'|translate}}</p>
       <ion-item>
-        <ion-label stacked>{{'FAMIGLIA'|translate}}</ion-label>
-        <ion-input [(ngModel)]="utente.famiglia.nome" type="text" #famiglia="ngModel" name="famiglia"></ion-input>
+        <ion-label stacked>{{'FAMIGLIA'|translate}}*</ion-label>
+        <ion-input [(ngModel)]="utente.famiglia.nome" type="text" #famiglia="ngModel" name="famiglia" required></ion-input>
       </ion-item>
+      <p ion-text [hidden]="password.valid" color="danger" padding-left>{{'FAMIGLIA_REQUIRED'|translate}}</p>
     </ion-list>
     <ion-row responsive-sm>
         <ion-col>
-          <button ion-button (click)="onSubmit(registerForm)" type="submit" [disabled]="!registerForm.form.valid" block>{{ 'REGISTRATI' | translate }}</button>
+          <button ion-button (click)="onSubmit(registerForm)" type="submit" [disabled]="!registerForm.form.valid" block outline>{{ 'REGISTRATI' | translate }}</button>
         </ion-col>
         <ion-col>
-          <button ion-button (click)="cancel()" block>{{'CANCEL_BUTTON' | translate}}</button>
+          <button ion-button (click)="cancel()" block outline>{{'CANCEL_BUTTON' | translate}}</button>
         </ion-col>
       </ion-row>
   </form>
   <div class="centrato">
-    <p>{{'FAMIGLIA_WARN'|translate}}</p>
     <p>{{'FAMIGLIA_WARN2'|translate}}</p>
   </div>
 
